# box

./: .gitignore  Cargo.toml  PS.md  README.md  TODO  TODO.md  Vagrantfile  box.ps1  hetzner.md  network.md  ubuntu.sh  vm.ps1
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
box/: Cargo.toml
box/src/: box.rs  hetzner.rs
cli/: Cargo.toml
cli/src/: box.rs
cloud/: Cargo.toml
cloud/src/: docker.sh  lib.rs
cloud/src/iso/: directory_entry.rs  file_entry.rs  mod.rs  option.rs  utils.rs  volume_descriptor.rs
cloud/src/iso/seed/: meta-data  user-data
code/: Cargo.toml
code/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
hetzner/: Cargo.toml
network/: Vagrantfile
src/: box.rs  hetzner.rs  vbox.rs
ubuntu/: Vagrantfile
ui/: Cargo.toml  ui.md
ui/scan/src/: scan.rs
ui/src/: lib.rs
vbox/: Cargo.toml
vbox/src/: lib.rs
virtualbox/: Cargo.toml  seed.iso
virtualbox/coreos/: config.ign  coreos.sh
virtualbox/init/: .gitignore  init.iso  init.sh  meta-data  user-data
virtualbox/src/: cloud.rs  coreos.rs  fedora.rs  fedora.sh  lib.rs  manage.rs  manager.rs  mscom.rs  network.rs  ova.rs  ssh.rs  strutils.rs  ubuntu.md  ubuntu.rs  xpcom.rs
