[package]
name = "xtec-box"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "box"
path = "src/box.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3.14"
hcloud = { version = "*", default-features = false, features = ["rustls-tls"] }
indicatif = "0.15.0"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
