[package]
name = "virtualbox"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.16"
anyhow = "1.0"
futures-util = "0.3.14"
home = "0.5"
indicatif = "0.15"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
vboxhelper = "0.3"
# https://docs.rs/thrussh/latest/thrussh/
# https://github.com/warp-tech/russh
