[package]
name = "virtualbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cloud = { path = "../cloud" }
core = { path = "../core" }
futures-util = "0.3.14"
home = "0.5"
indicatif = "0.15"
once_cell = "1.16"
regex = "1.7.0"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "stream"] }
ssh-key = { version = "0.5", features = ["ed25519"] }
tokio = { version = "1.11", features = ["macros", "rt-multi-thread","sync"] }
vboxhelper = "0.3"
windows = { version = "0.43", features = [ "Win32_Foundation", "Win32_System_Com", "implement"]}


# https://docs.rs/thrussh/latest/thrussh/
# https://github.com/warp-tech/russh
